--- a/tailwind/package.json
+++ b/tailwind/package.json
@@ -2,15 +2,18 @@
   "name": "tailwind",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://jg1995.github.io/svelte-fm-to-eafc-player-converter",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
     "autoprefixer": "^10.4.15",
+    "gh-pages": "^6.0.0",
     "postcss": "^8.4.28",
     "svelte": "^4.0.5",
     "tailwindcss": "^3.3.3",
